--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,7 @@
         .login-card {
             max-width: 400px;
             margin: 0 auto;
+            background: #f9f9f9;
         }
 
         .form-control {
@@ -22,7 +23,7 @@
         .logo-placeholder {
             width: 180px;
             height: 180px;
-            background-color: #fff;
+            background-color: #f9f9f9;
             display: flex;
             align-items: center;
             justify-content: center;
