add href for User Settings page

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -124,7 +124,8 @@
                         <a class="sb-nav-link sb-dropdown-title">Settings</a>
                     </li>
                     <li class="sb-nav-item">
-                        <a href="#" class="sb-nav-link sb-dropdown-link">Edit User</a>
+                        <a href="{{ url_for('usersettings') }}" class="sb-nav-link sb-dropdown-link">User
+                            Preferences</a>
                     </li>
                     <li class="sb-nav-item">
                         <a href="{{ url_for('create_user') }}" class="sb-nav-link sb-dropdown-link">Add User</a>
