added Edit Description funciton plus minor UI tweaks

--- a/templates/showtests_bgpaspath.html
+++ b/templates/showtests_bgpaspath.html
@@ -8,13 +8,13 @@
 <table class="table">
     <thead>
         <tr>
-            <th>ID</th>
+            <th class="text-center">ID</th>
             <th>Connect to device</th>
-            <th>Search AS-path for Prefix</th>
-            <th>Check as-path for ASN</th>
-            <th>Should ASN exist in AS-path?</th>
+            <th class="text-center">Search AS-path for Prefix</th>
+            <th class="text-center">Check as-path for ASN</th>
+            <th class="text-center">Should ASN exist in AS-path?</th>
             <th>Description of Test</th>
-            <th>Remove</th>
+            <th class="text-center">Remove</th>
         </tr>
     </thead>
     <tbody>
