credential delete only by owner. edit device description in UI

--- a/templates/credentials.html
+++ b/templates/credentials.html
@@ -5,25 +5,30 @@
 <table class="table">
     <thead>
         <tr>
-            <th>ID</th>
+            <th class="text-center">ID</th>
             <th>Username</th>
             <th>Password</th>
-            <th>Expires?</th>
-            <th>Remove</th>
+            <th class="text-center">Expires?</th>
+            <th class="text-center">Remove</th>
         </tr>
     </thead>
     <tbody>
         {% for credential in credentials %}
         <tr>
-            <td>{{ credential.id }}</td>
+            <td class="text-center">{{ credential.id }}</td>
             <td>{{ credential.username }}</td>
             <td>********</td>
-            <td>{{ 'Yes' if credential.passwordexpiry else 'No' }}</td>
-            <td>
+            <td class="text-center">{{ 'Yes' if credential.passwordexpiry else 'No' }}</td>
+            <td class="text-center">
+                {% if credential.owner %}
                 <button class="delete-credential" data-id="{{ credential.id }}"
                     style="background: none; border: none; padding: 0;">
                     <span class="material-symbols-rounded" title="Click to delete">delete</span>
                 </button>
+                {% else %}
+                <span class="material-symbols-rounded delete-locked"
+                    title="Created by {{ credential.owner_name }}">lock</span>
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
